Finished CSS. Fixed alignment of card images. Added some stuff to HTML including  a dummy logo

--- a/landingStyle.css
+++ b/landingStyle.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Space Mono', monospace;
     color: #dfe5c2;
     width: 100%;
+    margin: 0;
 }
 
 .header { 
@@ -23,46 +24,61 @@ body {
 
 }
 
+.logo img{ 
+    height: 50px; 
+    width: 50px;
+    padding-top: 5px;
+}
+
 .header button { 
     border-radius: 100px;
     padding: 5px;
+    width: 75px;
+    font-family: 'Space Mono', monospace;
+    background-color: #dfe5c2;
+
+}
+
+.header button:hover { 
+    background-color: #0a0328;
+    color:#dfe5c2;
+    cursor: pointer;
 }
 
 .welcome { 
     display: flex; 
     height: 490px; 
-    padding: 100px 75px 30px 75px;
+    padding: 200px 75px 30px 75px;
     flex-direction: column;
     justify-content: left;
     font-size:large;
 }
 
-.hire { 
+.welcome button { 
     width: 100px;
     padding: 5px;
     border-radius: 100px;
+    font-family: 'Space Mono', monospace;
+    background-color: #dfe5c2;
 
+}
+
+.welcome button:hover { 
+    background-color: #0a0328;
+    color:#dfe5c2;
+    cursor: pointer;
 }
 
 .header-and-welc { 
     width: 100%;
-    background-image: url("https://images.unsplash.com/photo-1449100840062-49e9aca7c8ec?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80");
+    background-image: url("https://images.unsplash.com/photo-1522800613660-62a595533961?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2671&q=80");
     background-color: #cccccc;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size:1600px;
     font-family: 'Space Mono', monospace;
-    color: #dfe5c2;
     text-shadow: 5px 2px 4px #000000;
 }
-
-.header-welc-cont { 
-    background-image: url("https://images.unsplash.com/photo-1449100840062-49e9aca7c8ec?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80");
-    background-color: #cccccc;
-    background-repeat: repeat;
-    background-attachment: fixed; 
-}
-
 
 
 .content { 
@@ -70,17 +86,22 @@ body {
     flex-direction: column;
     height: 400px; 
     width: 100%;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: #102037;
+    background-image: linear-gradient(#0a2447, #0a0328);
+    text-shadow: 5px 2px 4px #1a1d2c;
+    justify-content: center; 
+    align-content: center;
 }
 
 .content h1 { 
     text-align: center;
+    letter-spacing: .3rem;
 }
 
 .cards { 
     display: flex; 
     justify-content: space-around;
-    margin: 20px 10px;
+    margin: 40px 10px;
 }
 
 .subtext { 
@@ -93,32 +114,103 @@ body {
     color: white;
     transition: 0.3s;
 }
+
+
+.cardimg { 
+    background-color: rgb(255, 255, 255, 0.1);
+    height: 200px; 
+    width: 200px;
+    border-radius: 25px;
+    justify-content: space-around;
+    align-content: center;
+    box-shadow: 0 4px 8px 0 black, 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+}
 .cardimg img { 
-    height: 160px; 
+    height: 150px; 
     width: 150px;
     padding: 5px;
+    margin: 20px;
 }
 
-.cardimg:hover {
+.card:hover {
     transform:scale(1.05);
+}
+
+.quote-act-foot { 
+    background-image: url("https://images.unsplash.com/photo-1449100840062-49e9aca7c8ec?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80");
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 
 .quote {
     display: flex;
-    height: 200px;
+    height: 250px;
     padding: 50px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
-    background-color: rgb(0, 0, 0, 0.5);
-    background-image: url("https://images.unsplash.com/photo-1548625361-58a9b86aa83b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2673&q=80");
-    background-size: cover;
-    background-attachment: fixed;
     text-decoration: wavy;
+    text-shadow: 5px 2px 4px #000000;
+    font-size:x-large;
 }
 
 .theauth { 
     padding-left: 180px;
 }
+
+.action { 
+    background-color: rgb(0, 0, 0, 0.5);
+    height: 350px;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+.action-box { 
+    height: 200px; 
+    width: 600px; 
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    background-color: #102037;
+    border-radius: 25px;
+    letter-spacing: .3rem;
+    border:solid;
+    border-color: #0a0328;
+
+}
+
+.action button { 
+    width: 100px;
+    height: 55px;
+    padding: 5px;
+    border-radius: 100px;
+    margin-top: 30px;
+    background-color: #dfe5c2;
+    font-family: 'Space Mono', monospace;
+}
+
+.action button:hover { 
+    background-color: #0a0328;
+    color:#dfe5c2;
+    cursor: pointer;
+}
+
+
+.footer { 
+    height: 40px;
+    display: flex; 
+    gap: 5rem;
+    justify-content: center;
+    padding-bottom: 5px;
+    font-size: small;
+}
+
+.footer a { 
+    font-family: 'Space Mono', monospace;
+    color: #dfe5c2;
+}
+
